------------------------------------------------------------------------
0.06 | Piotr Roszatycki <dexter@debian.org> | ????-??-??

* Can define default value for rw properties with "use".

------------------------------------------------------------------------
0.05 | Piotr Roszatycki <dexter@debian.org> | 2007-05-11

* Added bundled Test/Unit/Lite.pm to MANIFEST.

------------------------------------------------------------------------
0.04 | Piotr Roszatycki <dexter@debian.org> | 2007-05-11

* use 5.006
* Test with bundled Test::Unit::Lite, so there is no dependency on
  non-core modules.
* Fixed unit tests so they work with Test::Unit and with Test::Unit::Lite.
* META.yml is generated with Makefile.PL.

------------------------------------------------------------------------
0.03 | Piotr Roszatycki <dexter@debian.org> | 2007-04-23

* Added ignore_package (rw) field, contains package names which are ignored
  from backtrace stack.
* Added ignore_level (rw) field, contains how many levels skip on backtrace
  stack.
* The default version for created exception classes is now 0.01
* META.yml created by hand.

------------------------------------------------------------------------
0.02 | Piotr Roszatycki <dexter@debian.org> | 2007-04-22

* First CPAN release.
* Module renamed to Exception::Base.

------------------------------------------------------------------------
0.01 | Piotr Roszatycki <dexter@debian.org> | 2007-04-20

* Development release.

------------------------------------------------------------------------